--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.13.0",
     "autoprefixer": "10.4.14",
     "next": "13.3.2",
     "postcss": "8.4.23",
@@ -16,5 +17,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "prisma": "^4.13.0"
   }
 }
