--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^4.13.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "next": "13.3.2",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
