--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
+    "@devexpress/dx-react-scheduler-material-ui": "^4.0.4",
     "@prisma/client": "^4.13.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "chakra-ui-autocomplete": "^1.4.5",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
+    "express-rate-limit": "^6.7.0",
     "framer-motion": "^10.12.7",
     "next": "13.3.2",
     "next-auth": "^4.22.1",
@@ -25,6 +28,7 @@
     "react-calendar": "^4.2.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-select": "^5.7.3",
     "serverless-mysql": "^1.5.5",
     "tailwindcss": "3.3.2"
   },
