--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "chakra-ui-autocomplete": "^1.4.5",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.3.2",
+    "next-absolute-url": "^1.2.2",
     "next-auth": "^4.22.1",
     "nodemailer": "^6.9.2",
     "postcss": "8.4.23",
